fix: todos in files view controller
There's still some work do be done, but it's good enough for now